# pulsar

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  commit-to-install.sh  install.sh  pulsar  pulsar.desktop  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  PHASE3_INTROSPECTION_REPORT.md  PIPEWIRE_RESEARCH.md
presets/: builtin_profiles.json
src/: __init__.py  main.py
src/config/: __init__.py
src/ui/: __init__.py  main_window.py
src/utils/: __init__.py  pactl_runner.py  preset_manager.py  profile_manager.py  pw_app_capture.py  pw_diagnostics.py
tests/: test_card_profiles.py  test_loopback_latency.py  test_pactl_runner.py  test_profile_manager.py  test_pw_app_capture.py  test_pw_diagnostics.py  test_volume_helpers.py
